# HelloWordKeyboard

./: README.md
01-模型/01-主体部分/: 00-装配体 Q's KeyBoard 主体部分.SLDASM  01-Q零件 主体底壳.SLDPRT  02-Q零件 主体PCB板.SLDPRT  03-零件 主体定位板.SLDPRT  04-Q零件 主体上盖.SLDPRT  06-Q零件 磁铁 20x3.SLDPRT  07-Q零件 磁铁 15x3.SLDPRT  08-Q零件 顶针2x4pin 母座.SLDPRT  09-Q零件 顶针2x4pin 公头.SLDPRT  11-Q零件 开关帽.SLDPRT  13-Q零件 单刀双掷开关.SLDPRT
01-模型/02-旋钮扩展/: 00-装配体 旋钮扩展.SLDASM  01 零件 旋钮扩展上盖.SLDPRT  02-零件 旋钮扩展底壳.SLDPRT  03-零件 旋钮扩展定位板.SLDPRT  04-零件 旋钮扩展按键PCB板.SLDPRT
01-模型/02-旋钮扩展/子装配体-旋钮/: 00-装配体 旋钮部分.SLDASM  01-零件 PCB板.SLDPRT  02-零件 电机底座.SLDPRT  03-零件 电机.SLDPRT  04-零件 电机上罩.SLDPRT  05-零件 旋钮上外壳.SLDPRT  06-零件 旋钮玻璃.SLDPRT  07-零件 6x6x5轻触开关.SLDPRT  零件 PCB-TFTLCD.SLDPRT  零件 TFT LCD 1.28inch.SLDPRT  零件 TFTLCD支撑圈.SLDPRT
01-模型/03-数字键盘/: 00-装配体 数字键盘.SLDASM  01 零件 数字键盘上盖.SLDPRT  02-零件 数字键盘底壳.SLDPRT  03-零件 数字键盘定位板.SLDPRT  04-零件 数字键盘PCB板.SLDPRT
03-程序/01-HelloWordKB_Num_BL/: CMakeLists.txt  README.md  stm32f103.ld
03-程序/01-HelloWordKB_Num_BL/boards/helloword/: board.cmake  keyboard.c
03-程序/01-HelloWordKB_Num_BL/boards/kb16/: board.cmake
03-程序/01-HelloWordKB_Num_BL/src/: main.c  usb.c
03-程序/02-HelloWordKB_Num/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  HelloWordKB_Num.ioc  HelloWordKB_Num.xml  STM32F103CBTx_FLASH.ld
03-程序/02-HelloWordKB_Num/HelloWord/: hw_keyboard.cpp  hw_keyboard.h
03-程序/02-HelloWordKB_Num/UserApp/: main.cpp
03-程序/03-HelloWordKB_Main_BL/: CMakeLists.txt  build.sh
03-程序/03-HelloWordKB_Main_BL/cmake/: boards.cmake  toolchain.cmake
03-程序/03-HelloWordKB_Main_BL/src/: gpio.h  main.c
03-程序/04-HelloWordKB_Main/: CMakeLists.txt
03-程序/04-HelloWordKB_Main/HelloWord/: hw_keyboard.h
03-程序/04-HelloWordKB_Main/UserApp/: main.cpp
03-程序/05-HelloWordKB_Ctrl/: .cproject  .mxproject  .project  CMakeLists.txt  HelloWordKB_Ctrl.ioc  HelloWordKB_Ctrl.xml
03-程序/06-HelloWordKB_Ctrl_UI/: HelloWord.sll  HelloWord.spj
(+108 files in other folders)
